syntax = "proto3";

package grpc.pea;

message NonceRequest {
}

message NonceResponse {
  bytes session_key = 1;
  bytes nonce = 2;
}

message AuthRequest {
  bytes session_key = 1;
  string endorsement_key_cert = 2;
  string endorsement_key_pub = 3;
  string attestation_key_pub = 4;
  bytes attestation_key_name = 5;
  bytes eventlog = 6;
  bytes quote = 7;
  bytes quote_signature = 8;
}

message AuthChallenge {
  bytes challenge = 1;
}

service Pea {
  rpc Nonce(NonceRequest) returns (NonceResponse) {}
  rpc Auth(AuthRequest) returns (AuthChallenge) {}
}
